--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,8 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
+   - task: Docker@2
+     inputs:
+       containerRegistry: 'DockerHubConnection'
+       repository: 'model-architect-staging'
+       command: 'push'
