--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,15 +21,11 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Build an image
+      displayName: buildAndPush an image
       inputs:
-        command: build
+        command: buildAndPush
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        containerRegistry: 'DockerHubConnection'
+        repository: 'model-architect-staging'
         tags: |
           $(tag)
- - task: Docker@2
-   inputs:
-     containerRegistry: 'DockerHubConnection'
-     repository: 'model-architect-staging'
-     command: 'buildAndPush'
-     Dockerfile: '**/Dockerfile'
