--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,16 +12,16 @@ variables:
   tag: '$(Build.BuildId)'
 
 stages:
-- stage: Build
+- stage: BuildAndPush
   displayName: Build image
   jobs:  
-  - job: Build
-    displayName: Build
+  - job: BuildAndPush
+    displayName: Build and push
     pool:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: buildAndPush an image
+      displayName: Build and push an image
       inputs:
         command: buildAndPush
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
