Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,3 +33,8 @@ stages:
         Dockerfile: '**/Dockerfile'
         tags: |
           $(tag)
+    - task: AzureWebAppContainer@1 # Add this at the end of your file
+      inputs:
+        azureSubscription: DockerHubConnection
+        appName: Model-Archt-Staging
+        containers: moayadhassouneh/model-architect-staging:$(tag)
