Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,8 @@ resources:
 - repo: self
 
 variables:
-  #tag: '$(Build.BuildId)'
-  tag: 'latest'
+  tag: '$(Build.BuildId)'
+  #tag: 'latest'
 
 stages:
 - stage: BuildAndPush
